client/src/css/All.css
.mobile-all {
  height: 615px;
  width: 412px;
  margin-bottom: 1rem;
  overflow-x: hidden !important;
}

.anchor-image {
  display: contents !important;
  cursor: pointer;
}

a.no-red-bar::after {
  content: none !important;
  transition: none !important;
}

.modal {
  padding: 0 !important;
  /* background-color: rgba(50, 50, 50, 0.477) !important; */
  background-image: linear-gradient(to right, #f06, #9f6);
  /* border: 1px solid var(--red); */
}

/* Modal Content/Box */
.modal-content {
  background-color: #32323282;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 0 !important;

  width: 100%; /* Could be more or less, depending on screen size */
  height: 100%;
}

/* The Close Button */
.close {
  color: #aaa;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-image-resize {
  /* width: 700px; */
  height: 800px;
}

.no-overflow {
  overflow-x: hidden !important;
}

